# ipassgen

./: Cargo.toml  Makefile  README.md
resources/: basic-words.txt  diceware-alnum.txt  diceware.txt
src/: err.rs  main.rs  symbol.rs
