[package]
name = "ipassgen"
description = "A password generator."

version = "0.1.0"
categories = ["command-line-utilities"]
keywords = ["cli", "password"]

edition = "2018"
license = "MIT OR Apache-2.0"
authors = ["Igaguri <igagurimk@gmail.com>"]
readme = "README.md"

documentation = "https://docs.rs/crate-name"
repository = "https://github.com/IgaguriMK/sbak"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
rand = "0.7.0"
rand_xorshift = "0.2.0"