[package]
name = "ipassgen"
description = "A password generator."

version = "0.1.0"
categories = ["command-line-utilities"]
keywords = ["cli", "password"]

edition = "2018"
license = "MIT OR Apache-2.0"
authors = ["Igaguri <igagurimk@gmail.com>"]
readme = "README.md"

documentation = "https://docs.rs/ipassgen"
repository = "https://github.com/IgaguriMK/ipassgen"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
pwhash = "0.3.0"
rand = "0.7.0"
rand_xorshift = "0.2.0"
